--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name":"joynes",
-  "version":"0.0.1a",
-  "main":"main",
-  "dependencies":
-  {
+  "name": "joynes",
+  "version": "0.0.1a",
+  "main": "main",
+  "dependencies": {
     "express": "~2.5",
     "ejs": "~0.6",
-    "socket.io": "~0.8"
+    "socket.io": "~0.8",
+    "lzma": "~1.2"
+  },
+  "subdomain": "joynes",
+  "scripts": {
+    "start": "server.js"
+  },
+  "engines": {
+    "node": "0.6.x"
   }
 }
